--- a/index.css
+++ b/index.css
@@ -46,3 +46,18 @@ h1 {
     justify-content: center;
     align-items: center;
 }
+
+@media (max-width: 480px) {
+    #head-container {
+        height: 100px;
+    }
+    #colour-picker {
+        height: 80px;
+    }
+    #scheme-mode {
+        height: 80px;
+    }
+    #get-colour-btn {
+        height: 80px;
+    }
+}
