--- a/index.css
+++ b/index.css
@@ -48,16 +48,21 @@ h1 {
 }
 
 @media (max-width: 480px) {
+    header {
+        padding: 2rem 1rem;
+    }
+
     #head-container {
-        height: 100px;
+        flex-direction: column; 
+        gap: 1rem;             
+        height: auto;          
     }
-    #colour-picker {
-        height: 80px;
+
+    #head-container * {
+        height: 3rem;            
     }
-    #scheme-mode {
-        height: 80px;
-    }
-    #get-colour-btn {
-        height: 80px;
+
+    h1 {
+        font-size: 1.5rem;
     }
 }
