--- a/index.css
+++ b/index.css
@@ -49,20 +49,23 @@ h1 {
 
 @media (max-width: 480px) {
     header {
-        padding: 2rem 1rem;
+        padding: 1.5rem 1rem;
     }
 
     #head-container {
-        flex-direction: column; 
-        gap: 1rem;             
-        height: auto;          
+        flex-direction: column;
+        gap: 1rem;
+        height: auto;
+        width: 100%;
     }
 
     #head-container * {
-        height: 3rem;            
+        height: 3rem;
+        font-size: 1rem;
     }
 
     h1 {
-        font-size: 1.5rem;
+        font-size: 1.4rem;
+        margin-bottom: 1rem;
     }
 }
